# pythonLib

./: .flake8  .gitattributes  .gitignore  LICENSE  README.md  conftest.py  installWindows.ps1  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json  init.sh
articlib/: articFileUtils.py  articLogger.py  consoleUtils.py  dateTime.py  dice.py  jsonHandler.py  logFile.py  logUtils.py  sqliteEngine.py  systemUtils.py  testEngine.py
src/: articFileUtils.py  articLogger.py  consoleUtils.py  dateTime.py  sqliteEngine.py  systemUtils.py  testEngine.py
test/: articLoggerTest.py  dateTimeTest.py  diceTest.py  fileIOTest.py  fullTest.py  sqliteEngineTest.py  systemUtilsTest.py  test_FileIO.py  test_dice.py  test_fileUtils.py  test_jsonHadler.py  test_logFile.py  test_logUtils.py  test_sqliteEngine.py
test/files/: testFile
