[tool.poetry]
name = "articlib"
version = "0.2.3"
description = "Small set of tools and utilities in python. Destined to be use in my personal projects."
authors = ["Artic42 <engineer@artic42.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
