[tool.poetry]
name = "articlib"
version = "0.2.9"
description = "Small set of tools and utilities in python. Destined to be use in my personal projects."
authors = ["Artic42 <engineer@artic42.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
pytest = "^9.0.2"

[tool.poetry.group.dev.dependencies]
flake8-pyproject = "^1.2.3"
flake8 = "^7.1.1"
mypy = "^1.11.2"
black = "^24.8.0"
freezegun = "^1.5.5"


[tool.poetry.group.deb.dependencies]
types-colorama = "^0.4.15.20250801"

[tool.mypy]
python_version = "3.13"
strict = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
